<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".EditDataActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_data"
        android:textColor="@color/primary"
        android:textAlignment="center"
        android:textSize="30sp"
        android:fontFamily="@font/bungee"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/primary"
            android:textColorHint="@color/primary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/name"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/edit_cust_name"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeColor="@color/primary"
            app:counterTextColor="@color/primary"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/primary"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/phone_number"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:id="@+id/edit_cust_phone"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:boxStrokeColor="@color/primary"
                app:counterTextColor="@color/primary"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/primary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/hours"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/edit_cust_hours"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:boxStrokeColor="@color/primary"
                app:counterTextColor="@color/primary"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/primary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/minutes"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/edit_cust_min"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:boxStrokeColor="@color/primary"
                app:counterTextColor="@color/primary"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/primary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="మొత్తం సొమ్ము"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/edit_total_amount"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:boxStrokeColor="@color/primary"
                app:counterTextColor="@color/primary"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/primary"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="చెల్లించిన సొమ్ము"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:id="@+id/edit_paid_amount"/>

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/paid"
            android:layout_marginTop="20dp"
            android:textColor="@color/primary"
            android:textSize="20sp"
            android:textStyle="bold|italic"
            />

        <RadioGroup
            android:id="@+id/edit_add_radio_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radio_not_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selector"
                android:textColor="@drawable/text_color"
                android:elevation="4dp"
                android:layout_margin="10dp"
                android:text="@string/not_paid"/>
            <RadioButton
                android:id="@+id/radio_partially_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selector"
                android:textColor="@drawable/text_color"
                android:elevation="4dp"
                android:text="@string/partially_paid"/>
            <RadioButton
                android:id="@+id/radio_fully_paid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_margin="10dp"
                android:button="@android:color/transparent"
                android:background="@drawable/radio_selector"
                android:textColor="@drawable/text_color"
                android:elevation="4dp"
                android:text="@string/fully_paid"/>

        </RadioGroup>


    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textColor="@color/white"
        android:text="@string/upload"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="@drawable/custom_btn"
        android:id="@+id/edit_upload_data_btn"/>


</LinearLayout>