<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="5dp"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        app:cardElevation="4dp"
        android:layout_width="match_parent"
        app:cardCornerRadius="8dp"
        app:cardBackgroundColor="#BEFFFFFF"
        android:layout_gravity="center_horizontal"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:textColor="@color/primary"/>

                <TextView
                    android:id="@+id/card_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vamsi_kalyan"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:textColor="@color/primary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:textColor="@color/primary"/>

                <TextView
                    android:id="@+id/card_phone"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:text="@string/_8897282899"
                    android:textSize="15sp"
                    android:textColor="@color/primary"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hours"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:textColor="@color/primary"/>

                <TextView
                    android:id="@+id/card_hour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:textColor="@color/primary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/minutes"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:textColor="@color/primary"/>

                <TextView
                    android:id="@+id/card_minute"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:text="20"
                    android:textSize="15sp"
                    android:textColor="@color/primary"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="మొత్తం సొమ్ము"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:textColor="@color/primary"/>


                <TextView
                    android:id="@+id/card_total_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2500"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:textColor="@color/primary"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="చెల్లించిన సొమ్ము"
                    android:padding="10dp"
                    android:textSize="15sp"
                    android:textColor="@color/primary"/>


                <TextView
                    android:id="@+id/card_paid_amount"
                    android:layout_width="wrap_content"
                    android:padding="10dp"
                    android:layout_height="wrap_content"
                    android:text="1200"
                    android:textSize="15sp"
                    android:textColor="@color/primary"/>

            </LinearLayout>

            <Button
                android:id="@+id/cardchangebutton"
                android:layout_width="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:layout_height="wrap_content"
                android:text="@string/change"
                android:background="@drawable/custom_btn"/>


        </LinearLayout>





    </androidx.cardview.widget.CardView>


</LinearLayout>